<resources>
    <string name="app_name">TO DO</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="add_task">ADD TASK</string>
    <string name="to_do_list">To Do List</string>
    <string name="settings">Settings</string>
    <string name="save">SAVE</string>
    <string name="edit_task">Edit Task</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="choose">Select</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="modes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>