<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        style="@style/add_new_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:inputType="text"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textColorHint="@color/gray2"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:lines="5"
            android:maxLines="5"
            android:minLines="1"
            android:textColorHint="@color/gray2"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="start"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/task_date"
            style="@style/date_picker_hint_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_task_btn"
        style="@style/add_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="2dp"
        android:layout_marginHorizontal="2dp"
        android:paddingVertical="12dp"
        android:text="@string/add_task" />

</LinearLayout>